--- a/setup.cfg
+++ b/setup.cfg
@@ -2,15 +2,28 @@
 name = pyramid_caching
 version = 0.1
 summary = Key versioning caching for pyramid.
+url = http://github.com/hadrien/pyramid_caching
 description-file =
     README.rst
     CHANGES.rst
 requires-dist =
-
+    pyramid
+keywords = web wsgi pylons pyramid cache
+classifier =
+    Development Status :: 3 - Alpha
+    Environment :: Plugins
+    Framework :: Pyramid
+    Intended Audience :: Developers
+    Programming Language :: Python
+    Programming Language :: Python :: 2.7
+    Programming Language :: Python :: Implementation :: CPython
+    Topic :: Internet :: WWW/HTTP
+    Topic :: Internet :: WWW/HTTP :: WSGI
 
 [files]
 packages =
     pyramid_caching
+    pyramid_caching.ext
 
 package_data =
 
@@ -18,7 +31,7 @@ package_data =
 match = ^test
 detailed-errors = 1
 nocapture = 1
-cover-package = pyramid_caching
+cover-package = pyramid_caching, example
 cover-inclusive = 1
 with-xcoverage = 1
 with-xunit = 1
