Add metadata in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,9 @@
 name = pyramid_caching
 version = 0.1
 summary = Key versioning caching for pyramid.
-url = http://github.com/hadrien/pyramid_caching
+author = Hadrien David
+author_email = hadrien+pypi@ectobal.com
+home_page = https://github.com/hadrien/pyramid_caching
 description-file =
     README.rst
     CHANGES.rst
