--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: python
+
 python:
   - "2.7"
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
+
 install: "pip install -r requirements-test.txt && pip install -e ."
-# command to run tests, e.g. python setup.py test
+
+services:
+  - memcached
+
 script:  "python setup.py nosetests"
+
 after_success:
     - coveralls
