--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,16 +1,17 @@
 d2to1
-
 nose
 nosexcover
+nose-parameterized
 coverage
 mock
 webtest
 yanc
 Paste
 PasteDeploy
+coveralls
+
+sqlalchemy
+umemcache
 
 ipdb
 ipdbplugin
-
-coveralls
-sqlalchemy
