--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install: "pip install -r requirements-test.txt && pip install -e ."
 
 services:
   - memcached
+  - redis-server
 
 script:  "python setup.py nosetests"
 
