--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [metadata]
 name = pyramid_caching
 summary = Key versioning caching for pyramid.
+version = 0.1.1
 author = Hadrien David
 author_email = hadrien+pypi@ectobal.com
 home_page = https://github.com/hadrien/pyramid_caching
